--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 			<h1>Lightning</h1>
 		</header>
 			<section id="content">
-				<canvas id="Click for another lightning bolt." data-processing-sources="Lightning.pde">
+				<canvas id="Click to make lightning." data-processing-sources="Lightning.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Click to make lightning
 	    </footer>
 	</body>
 </html>
